--- a/mysql/templates/ubuntu-9.10/my.cnf.erb
+++ b/mysql/templates/ubuntu-9.10/my.cnf.erb
@@ -51,6 +51,10 @@ basedir         = /usr
 datadir         = <%= @node[:mysql][:datadir] %>
 tmpdir          = /tmp
 skip-external-locking
+
+default-character-set = utf8
+default-collation     = utf8_general_ci
+
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
@@ -137,6 +141,7 @@ max_allowed_packet      = 16M
 
 [mysql]
 #no-auto-rehash # faster start of mysql but no tab completition
+default-character-set = utf8
 
 [isamchk]
 key_buffer              = 16M
