--- a/mysql/templates/default/my.cnf.erb
+++ b/mysql/templates/default/my.cnf.erb
@@ -119,6 +119,12 @@ relay-log-info-file = /var/lib/mysql/slave-relay-log.info
 relay-log-index     = /var/lib/mysql/slave-relay-log.index
 <% end %>
 
+<% if @node[:mysql][:replicated_databases]
+     @node[:mysql][:replicated_databases].each do |a| %>
+replicate-do-db = <%= a %>
+<%   end
+   end %>
+
 #log_bin                        = /var/log/mysql/mysql-bin.log
 expire_logs_days        = 10
 max_binlog_size         = 100M
