--- a/elasticsearch/templates/default/logging.yml.erb
+++ b/elasticsearch/templates/default/logging.yml.erb
@@ -1,8 +1,30 @@
-rootLogger: INFO, console, file
+rootLogger: DEBUG, console, file
+
+#
+# Put the name of any module -- using its config path -- in the section below.
+#
 logger:
-  jgroups: WARN
   # log action execution errors for easier debugging
-  action : INFO
+  action :      <%= node[:elasticsearch][:log_level][:default] %>
+
+  index:
+    shard:
+      recovery: <%= node[:elasticsearch][:log_level][:default] %>
+    store:      <%= node[:elasticsearch][:log_level][:index_store] %>
+    gateway:    <%= node[:elasticsearch][:log_level][:default] %>
+    engine:     <%= node[:elasticsearch][:log_level][:default] %>
+    merge:      <%= node[:elasticsearch][:log_level][:default] %>
+    translog:   <%= node[:elasticsearch][:log_level][:default] %>
+  cluster:
+    service:    <%= node[:elasticsearch][:log_level][:cluster_service] %>
+    action:
+      shard:    <%= node[:elasticsearch][:log_level][:action_shard] %>
+  gateway:      <%= node[:elasticsearch][:log_level][:default] %>
+  discovery:    <%= node[:elasticsearch][:log_level][:default] %>
+  jmx:          <%= node[:elasticsearch][:log_level][:default] %>
+  httpclient:   INFO
+  node:         <%= node[:elasticsearch][:log_level][:default] %>
+  plugins:      <%= node[:elasticsearch][:log_level][:default] %>
 
 appender:
   console:
@@ -18,4 +40,3 @@ appender:
     layout:
       type: pattern
       conversionPattern: "[%d{ABSOLUTE}][%-5p][%-25c] %m%n"
-      
