--- a/elasticsearch/templates/default/sv-elasticsearch-run.erb
+++ b/elasticsearch/templates/default/sv-elasticsearch-run.erb
@@ -1,11 +1,36 @@
 #!/bin/bash
 
+# Force all stderr to stdout
 exec 2>&1
 
-<%= "ulimit -n #{@node[:elasticsearch][:fd_ulimit]}" if @node[:elasticsearch][:fd_ulimit] %>
+# Where does elasticsearch live?
+export ES_HOME=<%= @options[:home_dir] %>
+export ES_CONF_DIR=<%= @options[:conf_dir] %>
+export ES_INCLUDE=$ES_CONF_DIR/elasticsearch.in.sh
+export JAVA_HOME=<%= @options[:java_home] %>
 
-ES_HOME=<%= @node[:elasticsearch][:home] %>
+# Where does data live?
+ES_DATA_ROOT=<%= @options[:data_root] %>
+export ES_DATA_DIR=$ES_DATA_ROOT/data
+export ES_WORK_DIR=$ES_DATA_ROOT/work
 
-. /etc/elasticsearch/elasticsearch.in.sh
+# bump the # of open files way way up
+ulimit -n 65536
+<%- unless @options[:ulimit_mlock].nil? %>
+# allow elasticsearch to lock itself into memory if JNA is installed
+ulimit -l <%= @options[:ulimit_mlock] %>
+<%- end %>
 
-exec chpst -u elasticsearch java $JAVA_OPTS $ES_JAVA_OPTS -Delasticsearch -Des.path.home=$ES_HOME -Des-foreground=yes -cp $CLASSPATH org.elasticsearch.bootstrap.Bootstrap
+ulimit -a
+
+# Force the heap size
+export ES_MIN_MEM=<%= @options[:java_heap_size_max] %>m
+export ES_MAX_MEM=<%= @options[:java_heap_size_max] %>m
+
+sleep 2 # ES will flap flap flap if it crashes on start. Slightly reduces chance that it fills your log dir.
+
+# Run in non-daemonizing mode
+cd $ES_HOME
+exec chpst -u elasticsearch $ES_HOME/bin/elasticsearch \
+  -Des.config=$ES_CONF_DIR/elasticsearch.yml \
+  -f 
