modified to allow username and password creation in chef for apache

--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -20,7 +20,7 @@
     Order allow,deny
     Allow from all
 
-    <% if node[:htpasswd] %>
+    <% if node[:rails_app][:htpasswd] %>
     AuthName "Password required"
     AuthType Basic
     AuthUserFile /etc/apache2/htpasswd
