--- a/solr/templates/default/solr.erb
+++ b/solr/templates/default/solr.erb
@@ -27,7 +27,7 @@ if [ -d <%= @app_dir %>/solr ]; then
         fi
       fi
  
-      nohup java -Djava.net.preferIPv4Stack=true -Dsolr.solr.home=solr -jar start.jar >> <%= @log_dir%>/<%=@app%>.log 2>> <%= @log_dir %>/<$=@app%>.err.log &
+      nohup java -Djava.net.preferIPv4Stack=true -Dsolr.solr.home=solr -jar start.jar >> <%= @log_dir%>/<%=@app%>.log 2>> <%= @log_dir %>/<%=@app%>.err.log &
       echo $! > <%= @pid_dir %>/<%= @app%>.pid
       ;;
     stop)
