--- a/redis/templates/default/redis-server.conf.erb
+++ b/redis/templates/default/redis-server.conf.erb
@@ -2,7 +2,7 @@ check process redis
   with pidfile <%= @pidfile %>
   start program = "/usr/local/bin/redis-server <%= @confdir %>/redis.conf"
     as uid redis and gid redis
-  stop program = "redis-cli SHUTDOWN"
+  stop program = "/usr/local/bin/redis-cli SHUTDOWN"
   if failed host 127.0.0.1 port 6379 then restart
   if 5 restarts within 5 cycles then timeout
 
