--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -59,7 +59,7 @@
     require valid-user
     <% end %>
     <% if node[:rails_app][:access] %>
-      <%= node[:rails_app][:access][:order] %>
+      Order <%= node[:rails_app][:access][:order] %>
       <% node[:rails_app][:access][:acl].each do |al| %>
         <%= al[:directive] %> from <%= al[:source] %>
       <% end unless node[:rails_app][:access][:acl].nil?%>
