--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -33,6 +33,15 @@
     Header set Cache-Control "no-cache"
   </Directory>
 
+  <%- if node[:rails_app][:proxy_rules] -%>
+    <%- node[:rails_app][:proxy_rules].each do |rule| -%>
+  <LocationMatch "<%=rule[:location_match]%>" >
+    RequestHeader unset Authorization
+    ProxyPassMatch <%=rule[:proxy_pass_match]%>
+  </LocationMatch >
+    <%- end -%>
+  <%- end -%>
+
   # Rails specific rewrite rules
   RewriteEngine On
 
