--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -37,6 +37,7 @@
     <%- node[:rails_app][:proxy_rules].each do |rule| -%>
   <LocationMatch "<%=rule[:location_match]%>" >
     RequestHeader unset Authorization
+    PassengerHighPerformance off
     ProxyPassMatch <%=rule[:proxy_pass_match]%>
   </LocationMatch>
     <%- end -%>
