--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -39,6 +39,7 @@
     RequestHeader unset Authorization
     PassengerHighPerformance off
     ProxyPassMatch <%=rule[:proxy_pass_match]%>
+    Allow from all
   </LocationMatch>
     <%- end -%>
   <%- end -%>
