--- a/papertrail/templates/default/remote_syslog.init.erb
+++ b/papertrail/templates/default/remote_syslog.init.erb
@@ -13,7 +13,7 @@ prog="remote_syslog"
 config="/etc/log_files.yml"
 pid_dir="/var/run"
 
-EXTRAOPTIONS="--tls --strip-color"
+EXTRAOPTIONS="--tls"
 
 pid_file="$pid_dir/$prog.pid"
 
