--- a/monit/templates/default/monitrc.erb
+++ b/monit/templates/default/monitrc.erb
@@ -3,7 +3,24 @@ set daemon <%= @node[:monit][:poll_period] %>
 
 set logfile syslog facility log_daemon
 
-set mailserver localhost
+set mailserver <%= @node[:monit][:mailserver][:host].is_a?(Array) ?
+                     @node[:monit][:mailserver][:host].join(' ') :
+                     @node[:monit][:mailserver][:host] -%>
+<%= "\n  port #{@node[:monit][:mailserver][:port]}" \
+      if @node[:monit][:mailserver][:port] -%>
+<%= "\n  username \"#{@node[:monit][:mailserver][:username]}\"" \
+      if @node[:monit][:mailserver][:username] -%>
+<%= "\n  password \"#{@node[:monit][:mailserver][:password]}\"" \
+      if @node[:monit][:mailserver][:password] -%>
+<%= "\n  using #{@node[:monit][:mailserver][:using]}" \
+      if @node[:monit][:mailserver][:using] -%>
+<%= "\n  certmd5 #{@node[:monit][:mailserver][:certmd5]}" \
+      if @node[:monit][:mailserver][:certmd5] -%>
+<%= "\n  with timeout #{@node[:monit][:mailserver][:timeout]} seconds" \
+      if @node[:monit][:mailserver][:timeout] -%>
+<%= "\n  using #{@node[:monit][:mailserver][:as_hostname]} hostname" \
+      if @node[:monit][:mailserver][:as_hostname] -%>
+
 
 set eventqueue
     basedir /var/monit  # set the base directory where events will be stored
