added an extras to vhost

--- a/rails_app/templates/default/vhost.erb
+++ b/rails_app/templates/default/vhost.erb
@@ -18,7 +18,7 @@
 
   <% node[:rails_app][:passenger].each do |setting, value| -%> 
     <%= "Passenger"+setting.gsub(/(^|_|\s+)([a-z])/){$2.upcase} %> <%= value %>
-    <% end unless node[:rails_app][:passenger].nil? -%>
+  <% end unless node[:rails_app][:passenger].nil? -%>
 
   <Directory "<%= node[:rails_app][:home] %>/current/public">
     Header set Cache-Control "max-age=315360000"
@@ -105,4 +105,7 @@
     <% end %>
   </Location>
 
+  <% if node[:rails_app][:vhost_extras] %>
+    <%= node[:rails_app][:vhost_extras] %>
+  <% end %>
 </VirtualHost>
