--- a/redis/templates/default/redis-server.conf.erb
+++ b/redis/templates/default/redis-server.conf.erb
@@ -1,8 +1,8 @@
 check process redis
   with pidfile <%= @pidfile %>
-  start program = "/usr/local/bin/redis-server <%= @confdir %>/redis.conf"
+  start program = "/bin/sh -c 'exec `/usr/bin/which redis-server` <%= @confdir %>/redis.conf'"
     as uid redis and gid redis
-  stop program = "/usr/local/bin/redis-cli SHUTDOWN"
+  stop program = "/sbin/start-stop-daemon --stop --retry 5 --quiet --pidfile <%= @pidfile %>"
   if failed host 127.0.0.1 port 6379 then restart
   if 5 restarts within 5 cycles then timeout
 
