--- a/elasticsearch/templates/default/elasticsearch.yml.erb
+++ b/elasticsearch/templates/default/elasticsearch.yml.erb
@@ -93,6 +93,20 @@ http.enabled: false
 #
 # gateway.expected_nodes: 2
 
+<% if node['elasticsearch']['aws_access_key'] %>
+cloud:
+  aws:
+    access_key: <%= node['elasticsearch']['aws_access_key'] %>
+    secret_key: <%= node['elasticsearch']['aws_secret_key'] %>
+
+  <% if node['elasticsearch']['gateway_type'] == 's3' &&
+        node['elasticsearch']['s3_bucket'] %>
+gateway:
+  type: s3
+  s3:
+    bucket: <%= node['elasticsearch']['s3_bucket'] %>
+  <% end %>
+<% end %>
 
 ############################# Recovery Throttling #############################
 
