--- a/fail2ban/templates/default/jail.conf.erb
+++ b/fail2ban/templates/default/jail.conf.erb
@@ -18,9 +18,9 @@
 [DEFAULT]
 
 # "ignoreip" can be an IP address, a CIDR mask or a DNS host
-ignoreip = 127.0.0.1 192.168.100.0
-bantime  = 300
-maxretry = 5
+ignoreip = 127.0.0.1 <%= node.fail2ban[:ignore_ip].respond_to?(:join) ? node.fail2ban[:ignore_ip].join(' ') : node.fail2ban[:ignore_ip] %>
+bantime  = <%= node.fail2ban[:bantime] %>
+maxretry = <%= node.fail2ban[:maxretry] %>
 
 # "backend" specifies the backend used to get files modification. Available
 # options are "gamin", "polling" and "auto".
@@ -31,7 +31,7 @@ backend = polling
 #
 # Destination email address used solely for the interpolations in
 # jail.{conf,local} configuration files.
-destemail = root@localhost
+destemail = <%= node.fail2ban[:destemail] %>
 
 #
 # ACTIONS
