--- a/postfix/templates/default/main.cf.erb
+++ b/postfix/templates/default/main.cf.erb
@@ -14,7 +14,7 @@ smtp_sasl_auth_enable = <%= node[:postfix][:smtp_sasl_auth_enable] %>
 <% if node[:postfix][:smtp_sasl_auth_enable] == "yes" -%>
 smtp_sasl_password_maps = <%= node[:postfix][:smtp_sasl_password_maps] %>
 smtp_sasl_security_options = <%= node[:postfix][:smtp_sasl_security_options] %>
-smtp_tls_CAfile = <%= node[:postfix][:smtp_tls_cafile] %>
+smtp_tls_CApath = <%= node[:postfix][:smtp_tls_capath] %>
 smtp_use_tls = <%= node[:postfix][:smtp_use_tls] %>
 <% end -%>
 myhostname = <%= node[:postfix][:myhostname] %>
