--- a/redis/templates/default/redis-server.conf.erb
+++ b/redis/templates/default/redis-server.conf.erb
@@ -1,6 +1,6 @@
 check process redis
   with pidfile <%= @pidfile %>
-  start program = "/bin/sh -c 'exec `/usr/bin/which redis-server` <%= File.join(@confdir, 'redis.conf') %>'"
+  start program = "/bin/sh -c 'export PATH=/usr/local/bin:$PATH; if /usr/bin/which redis-server; then exec `/usr/bin/which redis-server` <%= File.join(@confdir, 'redis.conf') %>; else echo redis-server not found; exit 1; fi'"
     as uid redis and gid redis
   stop program = "/sbin/start-stop-daemon --stop --retry 5 --quiet --pidfile <%= @pidfile %>"
   if failed host 127.0.0.1 port 6379 then restart
