--- a/passenger_apache2/templates/default/ruby_wrapper.erb
+++ b/passenger_apache2/templates/default/ruby_wrapper.erb
@@ -5,4 +5,4 @@ export RUBY_HEAP_SLOTS_GROWTH_FACTOR=1
 export RUBY_GC_MALLOC_LIMIT=30000000
 export RUBY_HEAP_FREE_MIN=12500
 
-exec "<%= node[:languages][:ruby][:ruby_bin] %>" "$@"
+exec "/usr/local/bin/ruby" "$@"
