--- a/rails_app/templates/default/database.yml.erb
+++ b/rails_app/templates/default/database.yml.erb
@@ -1,1 +1,1 @@
-<%= {"production" => @node[:rails_app][:database].to_hash}.to_yaml %>
+<%= {@node[:rails_app][:env] => @node[:rails_app][:database].to_hash}.to_yaml %>
