fixed template compile errors

--- a/elasticsearch/templates/default/elasticsearch.yml.erb
+++ b/elasticsearch/templates/default/elasticsearch.yml.erb
@@ -378,6 +378,7 @@ discovery:
   type: ec2
   ec2:
     groups: <%= node.elasticsearch.ec2_security_group_filter %>
+  <% end %>
 <% end %>
 ################################### Slow Log ##################################
 #
