installed elasticsearch using debian archive rather than using the source, changed to using init.d rather then Java service wrapper

--- a/elasticsearch/templates/default/elasticsearch.yml.erb
+++ b/elasticsearch/templates/default/elasticsearch.yml.erb
@@ -359,10 +359,10 @@ network.host: <%= node['elasticsearch']['publish_host'] %>
 ## for a step-by-step tutorial.
 #
 #
-<% if node['elasticsearch']['aws_access_key'] %>
+<% if node['elasticsearch']['aws_access_id'] %>
 cloud:
   aws:
-    access_key: <%= node['elasticsearch']['aws_access_key'] %>
+    access_key: <%= node['elasticsearch']['aws_access_id'] %>
     secret_key: <%= node['elasticsearch']['aws_secret_key'] %>
 
   <% if node['elasticsearch']['gateway_type'] == 's3' &&
