--- a/passenger_apache2/templates/default/passenger.conf.erb
+++ b/passenger_apache2/templates/default/passenger.conf.erb
@@ -1,3 +1,3 @@
 PassengerRoot <%= node[:passenger][:root_path] %>
-PassengerRuby /usr/bin/ruby_with_gc_tuning
+PassengerRuby /usr/bin/ruby
 PassengerMaxPoolSize <%= node[:passenger][:max_pool_size] %>
